@@ -9,8 +9,11 @@
 	* device/lib/z180/mul.s,
 	  device/lib/z180/mulchar.s:
 	  Fix z180 multiplication support routines for new calling convention.
-	* device/lib/_memset.c:
-	  Fix library function for new calling convention.
+	* device/lib/_memset.c,
+	  device/lib/z180/memmove.s,
+	  device/lib/z80/memmove.s,
+	  device/lib/z80n/memmove.s:
+	  Fix library functions for new calling convention.
 
 2021-07-28 Philipp Klaus Krause <pkk AT spth.de>
 
